test/programs/good/typechecker/function_compsition_4.lq
fun :: !(Qbit -> Qbit)
fun q = reset q

main :: Qbit
main = (fun . fun) (new @0)  
