test/programs/bad/typechecker/new_2.lq
initQubit :: !(() -> Qbit)
initQubit _ = new @0

main :: Bit
main = initQubit ()

